1999-10-16  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/multiboot.texi: Include the example source files of a
	Multiboot kernel.
	* docs/src2texi: New file.
	* docs/boot.S: Likewise.
	* docs/multiboot.h: Likewise.
	* docs/kernel.c: Likewise.
	* docs/boot.S.texi: Likewise.
	* docs/multiboot.h.texi: Likewise.
	* docs/kernel.c.texi: Likewise.
	* docs/Makefile.am (EXAMPLES): New varilable.
	(multiboot_TEXINFOS): Likewise.
	(SRC2TEXI): Likewise.
	(noinst_SCRIPTS): Added $(SRC2TEXI).
	(EXTRA_DIST): Added $(EXAMPLES) and $(multiboot_TEXINFOS).
	(%.c.texi): New target.
	(%.h.texi): Likewise.
	(%.S.texi): Likewise.
	
1999-09-22  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

        * multiboot.texi (BIOS device mapping techniques): New section.
        Stolen from bios_mapping.txt in grub-0.5.
        (Data comparison technique): New subsection.
        (I/O restriction technique): Likewise.
        (Example OS code): Rewrited from scratch.
        
1999-09-21  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

        * multiboot.texi: Rename Multiboot Standard to Multiboot
        Specification and upgrade the version to 0.7. Many cleanups
        are done.

1999-10-15  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (setup_func): Save CURRENT_DRIVE and
	CURRENT_PARTITION into IMAGE_DRIVE and IMAGE_PARTITION
	respectively, and restore them before running install_func.
	Use DEVICE instead of BUFFER to store the device name.
	Change each type of STAGE1, STAGE2 and CONFIG_FILE to an array
	of char.
	If installing the Stage 1 into a MBR, embed the Stage 1.5 in the
	sectors right after it.
	Return the result of install_func instead of zero.
	
1999-10-14  Pavel Roskin  <pavel_roskin@geocities.com>

	* configure.in: Check for opendisk in libutil.
	* grub/asmstub.c [__FreeBSD__ || __NetBSD__]: Include
	<sys/ioctl.h>.
	[HAVE_OPENDISK]: Include <util.h>.
	[__NetBSD__] (get_floppy_disk_name): Added support for NetBSD.